--- a/html/personajes.html
+++ b/html/personajes.html
@@ -1,81 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pac-Man personajes</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-    <header class="cabeza">
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-            <div class="container-fluid ms-4 me-4">
-                <a class="navbar-brand" href="#">
-                    <img src="../img/icon.png" alt="" width="30" height="24">
-                </a>
-              <a class="navbar-brand" href="../index.html">Pac-Man</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Personajes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-primary" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main class="cuerpo">
-        <div class="container">
-            <div class="title">
-                <h1>Personajes</h1>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat distinctio temporibus maxime veniam in minima magni non. Aperiam optio dolore delectus, sunt id eaque perferendis laboriosam maxime nemo repellat officiis.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum porro voluptatum voluptates placeat sint, enim cum similique, earum repellendus, adipisci doloremque veniam consectetur incidunt vitae natus? Hic in laborum iusto.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A expedita error nisi fugiat id architecto placeat aliquid, reiciendis quos voluptatum. Laboriosam est possimus minima quas explicabo sit vitae at dolore.</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, unde sit quis, voluptates nobis odit cupiditate sunt nam sapiente commodi maxime, provident deleniti. Quod quasi accusamus vero! Autem, ipsum culpa.</p>
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer class="pie">
 
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pac-Man Personajes</title>
+  <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+
+  <link rel="stylesheet" href="../css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
+<body>
+  <header class="cabeza">
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+      <div class="container-fluid ms-4 me-4">
+        <a class="navbar-brand" href="#">
+          <img src="../img/icon.png" alt="" width="30" height="30">
+        </a>
+        <a class="navbar-brand" href="../index.html">Pac-Man</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../html/personajes.html">Personajes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../html/historia.html">Historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../html/donde-ver.html">¿Dónde ver?</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="cuerpo mb-5">
+    <div class="container">
+      <div class="titulo my-5">
+        <h1>Personajes</h1>
+      </div>
+      <div class="row  mb-5">
+        <div class="col-6">
+          <div class="personajes">
+            <img src="../img/pacman.png" alt="pacman">
+          </div>
+        </div>
+        <div class="col-6">
+          <p>Pac-Man es el protagonista principal de la serie Pac-Man. Él es la famosa mascota de Namco y fue creado por
+            Tōru Iwatani. Desde su primera aparición en 1980, Pac-Man se ha convertido en un icono legendario de los
+            videojuegos y es uno de los personajes más reconocibles de videojuegos en el mundo.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="row ">
+        <div class="col-6 col-personajes col-rojo">
+          <div class="personajes">
+            <img src="../img/rojo.png" alt="rojo">
+          </div>
+          <p>Blinky (赤ベイ Akabei) es el líder de los fantasmas y el archi-enemigo de Pac-Man. Él persigue constantemente
+            A Pac-Man, y puede ser muy peligroso. Él es conocido por tener un mal genio, y es buen amigo de Inky, Pinky
+            y Clyde.
+
+            Aunque en un principio era el principal antagonista en videojuego Pac-Man para Arcade, su papel en gran
+            parte se ha reducido a antagonista secundario o un aliado en encarnaciones recientes, a pesar de que todavía
+            se considera el antagonista de la serie principal de facto en remakes del Pac-Man y por los aficionados
+            mayores.</p>
+        </div>
+        <div class="col-6 col-personajes col-rosa">
+          <div class="personajes">
+            <img src="../img/rosa.png" alt="rosa">
+          </div>
+          <p>Pinky es uno de los fantasmas que aparecen en Pac-Man. Es uno de los enemigos de Pac-Man, y es uno de los
+            fantasmas junto a Blinky, Inky y Clyde. Es de color rosa. Es el único fantasma femenino.</p>
+        </div>
+      </div>
+      <div class="row ">
+        <div class="col-6 col-personajes col-azul">
+          <div class="personajes">
+            <img src="../img/azul.png" alt="azul">
+          </div>
+          <p>Inky es uno de los fantasmas que aparecen en Pac-Man. Es uno de los enemigos de Pac-Man, y es uno de los
+            fantasmas junto a Blinky, Pinky y Clyde. Es de color celeste.</p>
+        </div>
+        <div class="col-6 col-personajes col-naranja">
+          <div class="personajes">
+            <img src="../img/naranja.png" alt="naranja">
+          </div>
+          <p>Clyde es uno de los fantasmas que aparecen en Pac-Man. Es uno de los enemigos de Pac-Man, y es uno de los
+            fantasmas junto a Blinky, Inky y Pinky. Es de color naranja.</p>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="pie">
+
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
