--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pac-Man</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="VarelaRound-Regular.ttf">
 </head>
 
 <body>
@@ -16,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <div class="container-fluid ms-4 me-4">
                 <a class="navbar-brand" href="#">
-                    <img src="img/icon.png" alt="" width="30" height="24">
+                    <img src="img/icon.png" alt="" width="30" height="30">
                 </a>
                 <a class="navbar-brand" href="#">Pac-Man</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -30,24 +32,10 @@
                             <a class="nav-link active" aria-current="page" href="html/personajes.html">Personajes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+                            <a class="nav-link active" aria-current="page" href="html/personajes.html">Historia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
+                            <a class="nav-link active" aria-current="page" href="html/personajes.html">¿Dónde ver?</a>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -85,7 +73,7 @@
     
         </div>
     </main>
-    <footer class="pie">
+    <footer class="pie fondo-footer">
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
