se configura el acerca de

--- a/html/donde-ver.html
+++ b/html/donde-ver.html
@@ -35,6 +35,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="../html/donde-ver.html">¿Dónde ver?</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../html/acerca-de.html">Acerca de</a>
+            </li>
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -50,24 +53,53 @@
         <h1>¿Dónde jugar Pac-Man?</h1>
       </div>
       <div class="row  mb-5">
-          <div class="col-6">
-              <img src="../img/game.gif" alt="game" class="w-100">
-          </div>
         <div class="col-6">
-          <p>Existen muchos lugares en donde puedes jugar Pac-Man, en consolas (portatiles o de sobremesa), en celulares, en navegador, etc. Ademas de eso existe muchas versiones de Pac-Man para diferentes plataformas, a continuacion dejare algunos ejemplos y algunos links para jugar Pac-Man en navegador/p>
+          <img src="../img/game.gif" alt="game" class="w-100">
+        </div>
+        <div class="col-6">
+          <p>Existen muchos lugares en donde puedes jugar Pac-Man, en consolas (portatiles o de sobremesa), en
+            celulares, en navegador, etc. Ademas de eso existe muchas versiones de Pac-Man para diferentes plataformas,
+            a continuacion dejare algunos ejemplos y algunos links para jugar Pac-Man en navegador</p>
         </div>
       </div>
       <hr>
       <div class="row ">
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <a href="https://es.wikipedia.org/wiki/Ms._Pac-Man" target="_blank" rel="noopener noreferrer"><img
+              class="img-juegos" src="../img/game-1.jpg" alt=""></a>
+          <h6>Ms. Pac-Man</h6>
+        </div>
+        <div class="col-2">
+          <a href="https://es.wikipedia.org/wiki/Pac-Man_World_2" target="_blank" rel="noopener noreferrer"><img
+              class="img-juegos" src="../img/game-2.jpg" alt=""></a>
+          <h6>Pac-Man World 2</h6>
+        </div>
+        <div class="col-2">
+          <a href="https://es.wikipedia.org/wiki/Pac-Man_Party" target="_blank" rel="noopener noreferrer"><img
+              class="img-juegos" src="../img/game-3.jpg" alt=""></a>
+          <h6>Pac-Man Party</h6>
+        </div>
+        <div class="col-2">
+          <a href="https://es.wikipedia.org/wiki/Pac-Mania" target="_blank" rel="noopener noreferrer"><img
+              class="img-juegos" src="../img/game-4.jpg" alt=""></a>
+          <h6>Pac-Mania</h6>
+        </div>
+        <div class="col-2">
+          <a href="https://es.wikipedia.org/wiki/Pac-Man_World_3" target="_blank" rel="noopener noreferrer"><img
+              class="img-juegos" src="../img/game-5.jpg" alt=""></a>
+          <h6>Pac-Man World 3</h6>
+        </div>
+        <div class="col-2">
+          <a href="https://es.wikipedia.org/wiki/Pac-Man_2:_The_New_Adventures" target="_blank"
+            rel="noopener noreferrer"><img class="img-juegos" src="../img/game-6.jpg" alt=""></a>
+          <h6>Pac-Man 2: The New Adventures</h6>
+        </div>
       </div>
+      <hr>
       <div class="row ">
-        
+        <div class="col-12">
+          <audio class="m-4 w-100" src="../video/audio-1.mp3" controls></audio>
+        </div>
       </div>
     </div>
   </main>
