--- a/html/historia.html
+++ b/html/historia.html
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../html/donde-ver.html">¿Dónde ver?</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../html/acerca-de.html">Acerca de</a>
+                        </li>
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -51,56 +54,58 @@
             <div class="titulo my-5">
                 <h1>Historia</h1>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="">
-                        <p>Pac-Man (conocido como Puck Man en Japón) es un videojuego popular en los Estados Unidos y
-                            Japón. Primero fue creado por Toru Iwatani y lanzado por Namco/Midway. Consiste en personaje
-                            con forma de una pizza amarilla parcial llamada Pac-Man que come puntos dentro de un
-                            laberinto azul.</p>
-                        <p>
-                            El jugador controla a Pac-Man a través de un laberinto azul, comiendo Pac-Dots y frutas.
-                            Cuando se comen todos los Pac-Dots, Pac-Man pasa a la siguiente etapa. Entre algunas de las
-                            etapas uno de las tres se reproduce animaciones de intermedio. Hay cuatro enemigos (Blinky,
-                            Pinky, Inky y Clyde) que deambulan por el laberinto, tratando de capturar a Pac-Man. Si un
-                            enemigo toca a Pac-Man, pierde una vida. Cuando pierde todas las vidas, el juego termina.
-                            Pac-Man recibe una sola vida de bonificación de 10.000 puntos por los interruptor DIP por
-                            defecto dentro de la máquina que puede cambiar los puntos necesarios o deshabilitar la vida
-                            bonus por completo.
+            <div class="borde-historia p-4">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="">
+                            <p>Pac-Man (conocido como Puck Man en Japón) es un videojuego popular en los Estados Unidos y
+                                Japón. Primero fue creado por Toru Iwatani y lanzado por Namco/Midway. Consiste en personaje
+                                con forma de una pizza amarilla parcial llamada Pac-Man que come puntos dentro de un
+                                laberinto azul.</p>
+                            <p>
+                                El jugador controla a Pac-Man a través de un laberinto azul, comiendo Pac-Dots y frutas.
+                                Cuando se comen todos los Pac-Dots, Pac-Man pasa a la siguiente etapa. Entre algunas de las
+                                etapas uno de las tres se reproduce animaciones de intermedio. Hay cuatro enemigos (Blinky,
+                                Pinky, Inky y Clyde) que deambulan por el laberinto, tratando de capturar a Pac-Man. Si un
+                                enemigo toca a Pac-Man, pierde una vida. Cuando pierde todas las vidas, el juego termina.
+                                Pac-Man recibe una sola vida de bonificación de 10.000 puntos por los interruptor DIP por
+                                defecto dentro de la máquina que puede cambiar los puntos necesarios o deshabilitar la vida
+                                bonus por completo.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 mt-4">
+                        <video src="../video/Hora de cierre_ La Historia de Pac-Man.mp4" class="w-100" controls></video>
+                    </div>
+                    <div class="col-6">
+                        <p>Cerca de las esquinas del laberinto se encuentran cuatro puntos intermitentes de mayor tamaño
+                            conocidos como Power Pellets que proporcionan a Pac-Man la capacidad temporal de comer a los
+                            enemigos. Los enemigos se vuelven azules y por lo general se mueven más lentamente y en el
+                            sentido inverso. Cuando se come un enemigo, sus ojos se mantienen y vuelven a la caja central
+                            donde se regenera en su color normal. Los enemigos con flash azul blanco indican que están a
+                            punto de llegar a ser peligrosos otra vez y el período de tiempo durante el cual los enemigos
+                            siguen siendo vulnerables varía de una etapa a la siguiente, convirtiéndose generalmente más
+                            corto que el juego progresa. En etapas posteriores, los enemigos van directamente a parpadear,
+                            por encima de azul, lo que significa que sólo se pueden comer durante un corto periodo de
+                            tiempo, a pesar de que todavía invierten la dirección cuando se come una Power Pellet; en etapas
+                            posteriores, incluso, los fantasmas no son comestibles (es decir, no cambian de color y aún
+                            hacen Pac-Man pierde una vida al tener contacto), pero aún así deambulan en dirección inversa.
                         </p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-6 mt-4">
-                    <video src="../video/Hora de cierre_ La Historia de Pac-Man.mp4" class="w-100" controls></video>
-                </div>
-                <div class="col-6">
-                    <p>Cerca de las esquinas del laberinto se encuentran cuatro puntos intermitentes de mayor tamaño
-                        conocidos como Power Pellets que proporcionan a Pac-Man la capacidad temporal de comer a los
-                        enemigos. Los enemigos se vuelven azules y por lo general se mueven más lentamente y en el
-                        sentido inverso. Cuando se come un enemigo, sus ojos se mantienen y vuelven a la caja central
-                        donde se regenera en su color normal. Los enemigos con flash azul blanco indican que están a
-                        punto de llegar a ser peligrosos otra vez y el período de tiempo durante el cual los enemigos
-                        siguen siendo vulnerables varía de una etapa a la siguiente, convirtiéndose generalmente más
-                        corto que el juego progresa. En etapas posteriores, los enemigos van directamente a parpadear,
-                        por encima de azul, lo que significa que sólo se pueden comer durante un corto periodo de
-                        tiempo, a pesar de que todavía invierten la dirección cuando se come una Power Pellet; en etapas
-                        posteriores, incluso, los fantasmas no son comestibles (es decir, no cambian de color y aún
-                        hacen Pac-Man pierde una vida al tener contacto), pero aún así deambulan en dirección inversa.
-                    </p>
-                </div>
-            </div>
-            <div class="row ">
-                <div class="col-12">
-                    <p>Además de Pac-Dots y Power Pellet, los puntos de bonificación, normalmente se conoce como las
-                        frutas (aunque no todos los ítems son frutas) aparecerán cerca del centro del laberinto. Estos
-                        ítems te darán puntos de bonificación extra cuando Pac-Man los come. Los ítems cambian y
-                        aumentan los valores de bonificación aumentan a lo largo del juego. A veces, los ítems pueden
-                        aparecer varias veces. Además, una serie de intermedios juegan después de ciertos niveles hacia
-                        el comienzo del juego, mostrando un conjunto humorístico de interacciones (la primera fue
-                        después del nivel 2, que hay un gigante Pac-Man persiguiendo un Blinky azul) entre Pac-Man y
-                        Blinky.</p>
+                <div class="row ">
+                    <div class="col-12">
+                        <p>Además de Pac-Dots y Power Pellet, los puntos de bonificación, normalmente se conoce como las
+                            frutas (aunque no todos los ítems son frutas) aparecerán cerca del centro del laberinto. Estos
+                            ítems te darán puntos de bonificación extra cuando Pac-Man los come. Los ítems cambian y
+                            aumentan los valores de bonificación aumentan a lo largo del juego. A veces, los ítems pueden
+                            aparecer varias veces. Además, una serie de intermedios juegan después de ciertos niveles hacia
+                            el comienzo del juego, mostrando un conjunto humorístico de interacciones (la primera fue
+                            después del nivel 2, que hay un gigante Pac-Man persiguiendo un Blinky azul) entre Pac-Man y
+                            Blinky.</p>
+                    </div>
                 </div>
             </div>
         </div>
