--- a/html/personajes.html
+++ b/html/personajes.html
@@ -36,6 +36,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="../html/donde-ver.html">¿Dónde ver?</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../html/acerca-de.html">Acerca de</a>
+          </li>
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
