--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="html/personajes.html">¿Dónde ver?</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="html/acerca-de.html">Acerca de</a>
+                        </li>
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
