--- a/html/historia.html
+++ b/html/historia.html
@@ -17,10 +17,7 @@
     <header class="cabeza">
         <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <div class="container-fluid ms-4 me-4">
-                <a class="navbar-brand" href="#">
-                    <img src="../img/icon.png" alt="" width="30" height="30">
-                </a>
-                <a class="navbar-brand" href="../index.html">Pac-Man</a>
+                <a class="navbar-bransd" href="../index.html"><img class="titulo-mor me-3" src="../img/title.png" alt="titulo mor"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
