--- a/html/personajes.html
+++ b/html/personajes.html
@@ -17,10 +17,7 @@
   <header class="cabeza">
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
       <div class="container-fluid ms-4 me-4">
-        <a class="navbar-brand" href="#">
-          <img src="../img/icon.png" alt="" width="30" height="30">
-        </a>
-        <a class="navbar-brand" href="../index.html">Pac-Man</a>
+        <a class="navbar-bransd" href="../index.html"><img class="titulo-mor me-3" src="../img/title.png" alt="titulo mor"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,21 +50,21 @@
       <div class="titulo my-5">
         <h1>Personajes</h1>
       </div>
-      <div class="row  mb-5">
-        <div class="col-6">
+      <div class="row mb-5 ">
+        <div class="col-12 col-sm-6">
           <div class="personajes">
             <img src="../img/pacman.png" alt="pacman">
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-sm-6 my-3">
           <p>Pac-Man es el protagonista principal de la serie Pac-Man. Él es la famosa mascota de Namco y fue creado por
             Tōru Iwatani. Desde su primera aparición en 1980, Pac-Man se ha convertido en un icono legendario de los
             videojuegos y es uno de los personajes más reconocibles de videojuegos en el mundo.</p>
         </div>
       </div>
       <hr>
-      <div class="row ">
-        <div class="col-6 col-personajes col-rojo">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-personajes col-rojo">
           <div class="personajes">
             <img src="../img/rojo.png" alt="rojo">
           </div>
@@ -80,7 +77,7 @@
             se considera el antagonista de la serie principal de facto en remakes del Pac-Man y por los aficionados
             mayores.</p>
         </div>
-        <div class="col-6 col-personajes col-rosa">
+        <div class="col-12 col-sm-6 col-personajes col-rosa">
           <div class="personajes">
             <img src="../img/rosa.png" alt="rosa">
           </div>
@@ -89,14 +86,14 @@
         </div>
       </div>
       <div class="row ">
-        <div class="col-6 col-personajes col-azul">
+        <div class="col-12 col-sm-6 col-personajes col-azul">
           <div class="personajes">
             <img src="../img/azul.png" alt="azul">
           </div>
           <p>Inky es uno de los fantasmas que aparecen en Pac-Man. Es uno de los enemigos de Pac-Man, y es uno de los
             fantasmas junto a Blinky, Pinky y Clyde. Es de color celeste.</p>
         </div>
-        <div class="col-6 col-personajes col-naranja">
+        <div class="col-12 col-sm-6 col-personajes col-naranja">
           <div class="personajes">
             <img src="../img/naranja.png" alt="naranja">
           </div>
